--- a/common.blocks/hero.css
+++ b/common.blocks/hero.css
@@ -23,6 +23,6 @@
 
 @media screen and (max-width: 500px) {
   .hero__inner {
-    min-height: 67.5vh;
+    min-height: 63vh;
   }
 }
